<resources>
    <string name="app_name">Noted</string>

    <string name="activity_wordcloud_empty">:( \n\n Nothing on your pinboard, create some items to see them here!</string>

    <string name="nav_drawer_pinboard">Pinboard</string>
    <string name="nav_drawer_archive">Archive</string>
    <string name="nav_drawer_wordcloud">Word cloud</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_burstle">Burstle</string>
    <string name="nav_drawer_griddition">Griddition</string>

    <string name="notification_sketch_title">Wakey wakey!</string>
    <string name="notification_text_sketch">Time to look at this great sketch you drew</string>
    <string name="notification_text_note">Take a look at the note you\'ve written</string>
    <string name="notification_text_checklist">Take a look at the checklist you made</string>
    <string name="notification_ticker">An alarm you set in Noted has been triggered!</string>
    <string name="notification_dismiss">Dismiss</string>
    <string name="notification_snooze">Snooze 1m</string>

    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_filter">Filter</string>
    <string name="menu_action_search">Search</string>
    <string name="menu_action_sort">Sort</string>
    <string name="menu_action_screenshot">Screenshot</string>
    <string name="menu_filter_none">#nofilter</string>
    <string name="menu_filter_note">Note</string>
    <string name="menu_filter_checklist">Checklist</string>
    <string name="menu_filter_sketch">Sketch</string>
    <string name="menu_filter_important">Important</string>
    <string name="menu_filter_locked">Locked</string>
    <string name="menu_filter_reminder">Reminder set</string>
    <string name="menu_sort_edited">Last edited</string>
    <string name="menu_sort_created">Created</string>
    <string name="menu_sort_type">Type</string>
    <string name="menu_sort_reminder">Reminder date</string>

    <string name="title_filter_none">#nofilter</string>
    <string name="title_filter_note">Notes</string>
    <string name="title_filter_checklist">Checklists</string>
    <string name="title_filter_sketch">Sketches</string>
    <string name="title_filter_important">Important items</string>
    <string name="title_filter_locked">Locked items</string>
    <string name="title_filter_reminder">Items with reminders</string>
    <string name="title_sort_edited_desc">Sort by Edited</string>
    <string name="title_sort_edited_asc">Sort by Edited</string>
    <string name="title_sort_created_desc">Sort by Created</string>
    <string name="title_sort_created_asc">Sort by Created</string>

    <string name="edit_text_title_hint">Title</string>
    <string name="edit_text_content_hint">Content</string>
    <string name="edit_text_content_new_item">+ New item</string>

    <string name="fab_create_note">New note</string>
    <string name="fab_create_checklist">New checklist</string>
    <string name="fab_create_sketch">New sketch</string>

    <string name="tag_new">+ tag</string>
    <string name="tag_hint">Tag</string>

    <string name="popup_stroke_thickness">Thickness</string>
    <string name="popup_stroke_opacity">Opacity</string>

    <string name="date_created">Created:</string>
    <string name="date_last_modified">Edited:</string>

    <string name="search_hint">Search content, tags etc.</string>

    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_delete_title">Delete this item?</string>
    <string name="dialog_delete_warning">This cannot be undone.</string>
    <string name="dialog_item_focus_add_tags">Add tags</string>
    <string name="dialog_item_focus_edit_content">Edit content</string>
    <string name="dialog_item_focus_add_reminder">Add reminder</string>
    <string name="dialog_item_focus_reminder_recurrence_never_title">Never repeat</string>
    <string name="dialog_item_focus_reminder_recurrence_daily_title">Every day</string>
    <string name="dialog_item_focus_reminder_recurrence_weekly_title">Every week</string>
    <string name="dialog_item_focus_reminder_recurrence_monthly_title">Every month</string>
    <string name="dialog_item_focus_reminder_recurrence_annually_title">Every year</string>
    <string name="dialog_item_focus_reminder_recurrence_never">Never</string>
    <string name="dialog_item_focus_reminder_recurrence_daily">Daily</string>
    <string name="dialog_item_focus_reminder_recurrence_weekly">Weekly</string>
    <string name="dialog_item_focus_reminder_recurrence_monthly">Monthly</string>
    <string name="dialog_item_focus_reminder_recurrence_annually">Yearly</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_restart_app_title">Restart now?</string>

    <string name="settings_title_theme">Theme</string>
    <string name="settings_theme_summary_light">Light</string>
    <string name="settings_theme_summary_dark">Dark</string>

    <string name="settings_category_settings">Settings</string>
    <string name="settings_category_about">About</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_items">Items</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_category_checklist">Checklist</string>

    <string name="settings_settings">Settings</string>

    <string name="settings_header_display">Display</string>
    <string name="settings_header_wordcloud">Word cloud</string>
    <string name="settings_header_behaviour">Behaviour</string>
    <string name="settings_header_feedback">Feedback</string>
    <string name="settings_header_source">Source code</string>

    <string name="settings_display_theme_title">Theme</string>
    <string name="settings_display_theme_light">Light</string>
    <string name="settings_display_theme_dark">Dark</string>
    <string name="settings_display_theme_classic">Classic</string>
    <string name="settings_display_theme_chrome">Chrome</string>
    <string name="settings_display_theme_nature">Nature</string>

    <string name="settings_display_columns_title">Pinboard columns</string>
    <string name="settings_display_type_counts_title">Show counts in navigation drawer</string>

    <string name="settings_display_date_format_title">Date format</string>
    <string name="settings_display_date_format_short">Short date (9 Sep 15:00)</string>
    <string name="settings_display_date_format_long">Long date (Wed, 4 Jul 2001 12:08:56)</string>
    <string name="settings_display_date_format_pretty">Pretty date (moments ago)</string>

    <string name="settings_display_truncate_item_title">Item display length</string>
    <string name="settings_display_truncate_item_none">No limit</string>
    <string name="settings_display_truncate_item_short">Short</string>
    <string name="settings_display_truncate_item_medium">Medium</string>
    <string name="settings_display_truncate_item_long">Long</string>

    <string name="settings_wordcloud_colour_title">Colour scheme</string>
    <string name="settings_wordcloud_colour_material">Material</string>
    <string name="settings_wordcloud_colour_current">Current theme</string>
    <string name="settings_wordcloud_colour_monotone">Monotone</string>
    <string name="settings_wordcloud_colour_pastel">Pastel</string>
    <string name="settings_wordcloud_colour_random">Random</string>

    <string name="settings_wordcloud_shape_title">Cloud shape</string>
    <string name="settings_wordcloud_shape_circle">Circle</string>
    <string name="settings_wordcloud_shape_horizontal_line">Horizontal line</string>
    <string name="settings_wordcloud_shape_vertical_line">Vertical line</string>
    <string name="settings_wordcloud_shape_cross">Cross</string>
    <string name="settings_wordcloud_shape_diamond">Diamond</string>
    <string name="settings_wordcloud_shape_picture_frame">Picture frame</string>
    <string name="settings_wordcloud_shape_war_formation">War formation</string>

    <string name="settings_wordcloud_density_title">Cloud density</string>
    <string name="settings_wordcloud_density_dense">Dense</string>
    <string name="settings_wordcloud_density_normal">Normal</string>
    <string name="settings_wordcloud_density_loose">Loose</string>

    <string name="settings_wordcloud_animation_title">Play animation on entry</string>

    <string name="settings_wordcloud_include_common_words_title">Include common words</string>

    <string name="settings_wordcloud_number_title">Max. words to show</string>

    <string name="settings_behaviour_notify_status_change">Notify after archiving, deleting etc.</string>
    <string name="settings_behaviour_notifications_sound">Play notification sound</string>
    <string name="settings_behaviour_notifications_vibrate">Vibrate on notification</string>
    <string name="settings_behaviour_confirm_delete">Confirm before delete</string>
    <string name="settings_behaviour_checklist_italicise_checked_title">Italicise checked items</string>
    <string name="settings_behaviour_checklist_strikethrough_checked_title">Strike out checked items</string>
    <string name="settings_behaviour_checklist_delete_checked_title">Delete items on completion</string>
    <string name="settings_behaviour_checklist_swipe_to_delete_title">Swipe to delete</string>

    <string name="title_note_new">New note</string>
    <string name="title_note_edit">Edit note</string>
    <string name="title_checklist_new">New checklist</string>
    <string name="title_checklist_edit">Edit checklist</string>
    <string name="title_sketch_new">New sketch</string>
    <string name="title_sketch_edit">Edit sketch</string>
    <string name="title_nav_drawer_pinboard">Pinboard</string>
    <string name="title_nav_drawer_archive">Archive</string>
    <string name="title_nav_drawer_wordcloud">Word cloud</string>
    <string name="title_loading_wordcloud">Loading cloud</string>

    <string name="snackbar_archived">Archived</string>
    <string name="snackbar_restored">Restored</string>
    <string name="snackbar_deleted">Deleted</string>
    <string name="snackbar_undo">Undo</string>

</resources>
