<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragment_show_items_container"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/windowBackground"
    >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_show_items_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/fragment_show_items_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <com.cerebellio.noted.views.FilteredIconView
            android:layout_width="@dimen/size_large"
            android:layout_height="@dimen/size_large"
            android:layout_gravity="center"
            android:src="@drawable/ic_empty"
            />

    </LinearLayout>

    <View
        android:id="@+id/fragment_show_items_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:visibility="gone"
        />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_show_items_floating_action_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/size_medium"
        fab:fab_labelsPosition="left"
        fab:fab_labelStyle="@style/fab_label"
        fab:fab_addButtonColorNormal="?attr/colorAccent"
        fab:fab_addButtonColorPressed="?attr/colorAccent"
        fab:fab_addButtonSize="normal"
        >

       <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragnent_show_items_floating_actions_menu_create_sketch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sketch"
            fab:fab_colorNormal="?attr/floatingActionMenuColorThird"
            fab:fab_title="@string/fab_create_sketch"
            fab:fab_size="mini"
            />

       <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragnent_show_items_floating_actions_menu_create_checklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_checklist"
            fab:fab_colorNormal="?attr/floatingActionMenuColorSecond"
            fab:fab_title="@string/fab_create_checklist"
            fab:fab_size="mini"
            />

       <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragnent_show_items_floating_actions_menu_create_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_note"
            fab:fab_colorNormal="?attr/floatingActionMenuColorFirst"
            fab:fab_title="@string/fab_create_note"
            fab:fab_size="mini"
            />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</FrameLayout>